# up

./: .editorconfig  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  clippy.toml
docs/: CommandLineHelp-Linux.md  CommandLineHelp-macOS.md  RELEASE.md
meta/: bootstrap-test  cargo-docker  release  test
src/: config.rs  docs.rs  env.rs  errors.rs  exec.rs  faketty.rs  generate.rs  lib.rs  main.rs  opts.rs  tasks.rs  utils.rs
src/docs/: completions.rs  manpages.rs  markdown.rs  schema.rs
src/generate/: git.rs
src/opts/: paths.rs
src/tasks/: defaults.rs  git.rs  link.rs  task.rs  update_self.rs
src/tasks/defaults/: plist_utils.rs
src/tasks/git/: checkout.rs  cherry.rs  errors.rs  fetch.rs  merge.rs  prune.rs  status.rs  update.rs
src/utils/: files.rs  mac.rs  time.rs
tests/: defaults.rs  generate.rs  git.rs  link.rs  list.rs  run.rs  z_style.rs
tests/fixtures/bootstrap-test/git/: git  git-credential-netrc
tests/fixtures/generate/test_generate_passing/expected_tasks/: git_1.yaml  git_2.yaml
tests/fixtures/run/test_up_run_passing/up_config_dir/tasks/: defaults.yaml  skip_self_cmd.yaml
tests/testutils/: Cargo.toml
tests/testutils/src/: ensure_utils.rs  lib.rs
