# Make this a workspace so that path dependencies below share the same lockfile.
[workspace]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/gibfahn/up"
keywords = ["cli", "tool"]
categories = ["command-line-utilities", "config"]
readme = "README.md"
authors = ["Gibson Fahnestock <gibfahn@gmail.com>"]

[workspace.lints.rust]
unsafe_code = "forbid"

# up is the root package in this workspace.
[package]
name = "up"
version = "0.17.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

description = """
up is a tool to help you keep your machine up to date.
"""
documentation = "https://docs.rs/crate/up"
homepage = "https://github.com/gibfahn/up"
exclude = ["tests/"]

[[bin]]
name = "up"
path = "src/main.rs"

[dependencies]
camino = { version = "1.1.9", features = ["serde1"] }
chrono = "0.4.39"
clap = { version = "4.5.23", features = [
  "derive",
  "env",
  "string",
  "wrap_help",
] }
clap_complete = "4.5.40"
color-eyre = "0.6.3"
dirs = "5.0.1"
displaydoc = "0.2.5"
duct = "0.13.7"
envy = "0.4.2"
git2 = { version = "0.19.0", features = [
  "vendored-openssl",
  "vendored-libgit2",
] }
hex = "0.4.3"
itertools = "0.14.0"
indicatif = { version = "0.17.9", features = ["rayon"] }
log = "0.4.22"
plist = "1.7.0"
rayon = "1.10.0"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
ring = "0.17.8"
schemars = "0.8.21"
semver = "1.0.24"
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.134"
serde_yaml = "0.9.34"
shell-escape = "0.1.5"
shellexpand = "3.1.0"
thiserror = "2.0.9"
toml = "0.8.19"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
uzers = "0.12.1"
walkdir = "2.5.0"
tracing-indicatif = "0.3.8"
clap-markdown = "0.1.4"
clap_mangen = "0.2.24"
pretty_assertions = "1.4.1"

[dev-dependencies]
assert_cmd = "2.0.16"
glob = "0.3.2"
ignore = "0.4.23"
predicates = "3.1.3"
serial_test = "3.2.0"
test-log = { version = "0.2.16", default-features = false, features = [
  "trace",
] }
testutils = { path = "./tests/testutils" }
